# oxide-outbox

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
example/distributed-deduplication/: Cargo.toml
example/distributed-deduplication/src/: main.rs
example/dlq-example/: Cargo.toml
example/dlq-example/src/: main.rs
example/metrics-example/: Cargo.toml
example/outbox-in-memory/: Cargo.toml
example/outbox-in-memory/src/: main.rs
outbox-core/: Cargo.toml  README.md
outbox-core/src/: builder.rs  config.rs  error.rs  gc.rs  lib.rs  manager.rs  model.rs  object.rs  processor.rs  publisher.rs  reply.rs  service.rs  storage.rs
outbox-core/src/dlq/: heap.rs  mod.rs  model.rs  object.rs  processor.rs  storage.rs
outbox-core/src/idempotency/: mod.rs  storage.rs  strategy.rs
outbox-kafka/: Cargo.toml  README.md
outbox-kafka/src/: config.rs  lib.rs
outbox-postgres/: Cargo.toml  README.md
outbox-postgres/migrations/: 20260213152819_init.sql  20260425120000_dlq.sql
outbox-postgres/src/: lib.rs
outbox-redis/: Cargo.toml  README.md
outbox-redis/src/: config.rs  dlq.rs  lib.rs
