[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Suzdaltsev Denis <suzdaltsevdenis@icloud.com>"]
license = "MIT"

[workspace]
resolver = "2"
members = ["outbox-core", "outbox-postgres"]

[workspace.dependencies]
async-trait = "0.1.89"
thiserror = "2.0.18"

tracing = "0.1.44"


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


uuid = { version = "1.20.0", features = ["v4"] }
time = { version = "0.3.46", features = ["serde"] }


tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "time"] }


mockall = "0.14.0"
rstest = "0.26.1"
testcontainers = "0.27.0"
testcontainers-modules = "0.14.0"