[package]
name = "outbox-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
async-trait.workspace = true

tokio.workspace = true
mockall.workspace = true
rstest.workspace = true

tracing.workspace = true

sqlx.workspace = true