[package]
name = "outbox-core"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core traits and logic for modular transactional outbox pattern in Rust"
repository = "https://github.com/Vancoola/oxide-outbox"
documentation = "https://docs.rs/outbox-core"
readme = "../README.md"
keywords = ["outbox", "transactional", "event-driven"]
categories = ["database", "asynchronous"]

[dependencies]
thiserror.workspace = true
uuid.workspace = true
serde_json.workspace = true
time.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true

sqlx = { workspace = true, optional = true }
serde.workspace = true

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true

[features]
default = []
full = ["sqlx"]

[lints]
workspace = true
