[package]
name = "outbox-kafka"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]

outbox-core = { version = "0.3.1", path = "../outbox-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

rdkafka.workspace = true

[lints]
workspace = true
