[package]
name = "outbox-kafka"
description = "Kafka transport implementation for the oxide-outbox"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["outbox", "kafka", "transactional", "events", "rdkafka"]
categories = ["database", "asynchronous", "network-programming"]
readme = "README.md"

[dependencies]

outbox-core = { version = "0.4.0", path = "../outbox-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true

rdkafka.workspace = true

[lints]
workspace = true
