[package]
name = "outbox-postgres"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PostgreSQL storage implementation for oxide-outbox using sqlx"
repository = "https://github.com/Vancoola/oxide-outbox"
documentation = "https://docs.rs/outbox-postgres"
readme = "../README.md"
keywords = ["outbox", "postgres", "sqlx", "transactional"]
categories = ["database"]

[dependencies]
sqlx.workspace = true
async-trait.workspace = true
outbox-core = { version = "0.2.0", path="../outbox-core", features = ["sqlx"] }

tracing.workspace = true

uuid.workspace = true
tokio.workspace = true

[lints]
workspace = true