[package]
name = "outbox-redis"
description = "Redis-based idempotency provider for the outbox-core"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["outbox", "idempotency", "redis", "postgres", "distributed-systems"]
categories = [
    "database",
    "asynchronous",
    "network-programming",
    "web-programming",
    "data-structures"
]
readme.workspace = true

[dependencies]
redis.workspace = true
moka = { workspace = true, optional = true }
async-trait.workspace = true

outbox-core = { version = "0.2.0", path = "../outbox-core" }

tracing.workspace = true

[features]
default = []
full = ["moka"]

[lints]
workspace = true
