[package]
name = "dlq-example"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "time"] }
async-trait = "0.1.89"
outbox-core = { path = "../../outbox-core", features = ["dlq"] }
outbox-postgres = { path = "../../outbox-postgres", features = ["dlq"] }
outbox-redis = { path = "../../outbox-redis", features = ["dlq"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true
