[package]
name = "outbox-in-memory"
version = "0.1.0"
edition = "2024"
authors = ["Suzdaltsev Denis <suzdaltsevdenis@icloud.com>"]
license = "MIT"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "time"] }
async-trait = "0.1.89"
outbox-core = { path = "../../outbox-core" }
outbox-postgres = { path = "../../outbox-postgres" }

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde_json = "1.0.149"

[workspace]
